aligned and fixed the text

--- a/src/neo/components/Project/style.css
+++ b/src/neo/components/Project/style.css
@@ -1,8 +1,8 @@
 .project {
-  width: 0; 
-  height: 0; 
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  
-  border-bottom: 5px solid black;
+  color: #505050;
+  text-decoration: none;
+}
+
+.project:visited {
+  color: #505050;
 }
